--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
 <!-- title -->
-<title> &middot {{ page.title }}</title>
+<title> {{ site.data.brume.author }} &middot {{ page.title }}</title>
 
 <!-- icons -->
 <link rel="shortcut icon" href="{{site.baseurl}}/public/images/faviconTomoya Takano.ico" />
