--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -6,10 +6,10 @@
 $site-background-color: #ffffff;
 $contrast-color: #333;
 
-$azul-accent-color: #0070bb; 
-$ruby-accent-color: #e0115f;
+$azul-accent-color: #76B2EE; 
+$ruby-accent-color: #E64B18;
 $amber-accent-color: #ff7e00;
-$avocado-accent-color: #568203;
+$avocado-accent-color: #40584C;
 
 /*============================================================================*/
 * {
