--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
 <link rel="shortcut icon" href="{{site.baseurl}}/public/images/faviconTomoya Takano.ico" />
 <link rel="stylesheet" href="{{site.baseurl}}/public/css/academicons.css">
 <link rel="stylesheet" href="{{site.baseurl}}/public/css/academicons.min.css">
-<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 <!-- stylesheets -->
 <link rel="stylesheet" href="{{site.baseurl}}/public/css/responsive.gs.12col.css">
@@ -27,7 +27,7 @@
 
 {% if site.paginate %}
 <!-- font Awesome -->
-<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 {% endif %}
 
 <!-- feed links -->
